# blockconvert

./: .gitignore  .gitmodules  BingSiteAuth.xml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  blacklist.txt  blockconvert.py  build_regex.py  dns_check.py  download.py  filterlists.csv  find_false_positives.py  generate_readme.py  get_subdomains.py  index.html  local.toml  local2.toml  main.py  package-lock.json  package.json  rust-toolchain.toml  sources.md  tailwind.config.js  tld_list.txt  update.bat  update.sh  urls.txt  whitelist.txt
.cargo/: config.toml
common/: Cargo.toml
common/src/: lib.rs
data/http%3A%2F%2Fvxvault.net%2FURL_List.php/: blacklist.txt  metadata.json
data/https%3A%2F%2Fadaway.org%2Fhosts.txt/: blacklist.txt  metadata.json
data/https%3A%2F%2Fadguardteam.github.io%2FAdGuardSDNSFilter%2FFilters%2Ffilter.txt/: blacklist.txt  metadata.json  whitelist.txt
data/https%3A%2F%2Fbetter.fyi%2FblockerList.txt/: blacklist.txt  metadata.json  whitelist.txt
data/https%3A%2F%2Fbitbucket.org%2Fethanr%2Fdns-blacklists%2Fraw%2F8575c9f96e5b4a1308f2f12394abd86d0927a4a0%2Fbad_lists%2FMandiant_APT1_Report_Appendix_D.txt/: blacklist.txt  metadata.json
data/https%3A%2F%2Fcybercrime-tracker.net%2Fall.php/: blacklist.txt  metadata.json
data/https%3A%2F%2Feasylist-downloads.adblockplus.org%2Fadwarefilters.txt/: blacklist.txt  metadata.json
data/https%3A%2F%2Feasylist-downloads.adblockplus.org%2Feasylistchina.txt/: blacklist.txt  metadata.json  whitelist.txt
data/https%3A%2F%2Feasylist-downloads.adblockplus.org%2Feasylistdutch.txt/: blacklist.txt  metadata.json  whitelist.txt
data/https%3A%2F%2Feasylist-downloads.adblockplus.org%2Feasylistitaly.txt/: blacklist.txt  metadata.json
data/https%3A%2F%2Feasylist.to%2Feasylist%2Feasylist.txt/: blacklist.txt  metadata.json  whitelist.txt
data/https%3A%2F%2Feasylist.to%2Feasylist%2Feasyprivacy.txt/: blacklist.txt  metadata.json  whitelist.txt
data/https%3A%2F%2Feasylist.to%2Feasylist%2Ffanboy-annoyance.txt/: blacklist.txt  metadata.json  whitelist.txt
data/https%3A%2F%2Feasylist.to%2Feasylistgermany%2Feasylistgermany.txt/: blacklist.txt  metadata.json  whitelist.txt
data/https%3A%2F%2Ffeodotracker.abuse.ch%2Fdownloads%2Fipblocklist.txt/: blacklist.txt  metadata.json
data/https%3A%2F%2Ffiltri-dns.ga%2Ffiltri.txt/: blacklist.txt  metadata.json
data/https%3A%2F%2Fgitlab.com%2FZeroDot1%2FCoinBlockerLists%2Fraw%2Fmaster%2Flist.txt/: blacklist.txt  metadata.json
data/https%3A%2F%2Fgitlab.com%2FZeroDot1%2FCoinBlockerLists%2Fraw%2Fmaster%2Flist_optional.txt/: blacklist.txt  metadata.json
data/https%3A%2F%2Fgitlab.com%2Fcurben%2Furlhaus-filter%2Fraw%2Fmaster%2Furlhaus-filter.txt/: blacklist.txt  metadata.json
data/https%3A%2F%2Fgitlab.com%2Fquidsup%2Fnotrack-blocklists%2Fraw%2Fmaster%2Fnotrack-blocklist.txt/: blacklist.txt  metadata.json
data/https%3A%2F%2Fgitlab.com%2Fquidsup%2Fnotrack-blocklists%2Fraw%2Fmaster%2Fnotrack-malware.txt/: blacklist.txt  metadata.json
data/https%3A%2F%2Fhblock.molinero.dev%2Fhosts/: blacklist.txt  metadata.json
data/https%3A%2F%2Fhostsfile.mine.nu%2Fhosts0.txt/: blacklist.txt  metadata.json
dns/: argus.py  dns_lookup.py  dns_over_https.py  passive_dns.py  passive_dns_base.py  threatminer.py  virus_total.py
frontend/: Cargo.toml
frontend/src/: domain_lookup.rs  lib.rs  list_manager.rs
internal/: adblock.txt  allow_regex.txt  allowlist.txt  blacklist.txt  block_ipnets.txt  block_ips.txt  block_regex.txt  blocklist.txt  whitelist.txt
migrations/: 20240223011106_lastmodified.sql  20240223011400_etag.sql  20240224195223_filter_list_contents.sql  20240226223817_domain_rules.sql  20240226230317_domain_block.sql  20240228004601_extend_rules.sql  20240228005409_drop_rule.sql  20240228015906_change_unique.sql  20240228164553_ip.sql  20240228170646_ip.sql  20240228175807_remove_unknown.sql  20240301000455_more_indexes.sql  20240301000900_subdomain_idx.sql  20240301030213_subdomain_inde.sql  20240302171950_expanded_subdomains.sql  20240302192658_index.sql  20240302194037_domain_rule_id_idx.sql  20240304235746_filterlist.sql  20240305000257_filterlist.sql  20240305000612_filterlist.sql  20240305003411_filterlist.sql  20240305200551_rule_matches.sql  20240306123603_rule_count.sql  20240306214217_index.sql  20240307005702_lists.sql  20240307012450_index.sql  20240307031445_idx.sql
output/: adblock.txt  hosts.txt  ip_blocklist.ipset  ip_blocklist.txt  whitelist_adblock.txt  whitelist_domains.txt
site/: Cargo.toml  README.md  package-lock.json  tailwind.config.js
site/migrations/: 20240222234126_filterlists.sql  20240223010915_lastmodified.sql  20240224194439_rules.sql  20240224195223_filter_list_contents.sql  20240224203224_list_rules.sql  20240225214254_list_source.sql  20240225230839_index.sql  20240225231841_index.sql  20240225232249_index.sql  20240226004619_change_date.sql  20240226013547_source.sql  20240226152939_temp.sql  20240226215547_remove_column.sql  20240226215929_remove_id.sql  20240226220711_remove_fkey.sql  20240226230425_rename.sql  20240227191530_drop_column.sql  20240227194830_drop_column.sql  20240227200629_drop_table.sql  20240227201410_primary_key.sql  20240228001134_domain_rules.sql  20240228180753_index.sql  20240229210101_domains.sql  20240229212527_subdomains.sql  20240302184040_processed_subdomains.sql  20240302194733_not_null_parent.sql  20240302205633_not_null#.sql  20240302222401_dns.sql
site/src/: app.rs  domain_import_view.rs  domain_view.rs  lib.rs  list_manager.rs  list_parser.rs  main.rs  rule_view.rs  server.rs  source_view.rs
src/: app.rs  blockconvert.rs  certstream.rs  config.rs  db.rs  dns_lookup.rs  doh.rs  domain.rs  domain_filter.rs  domain_import_view.rs  domain_view.rs  fileserv.rs  filterlist.rs  home_page.rs  ip_view.rs  lib.rs  list_builder.rs  list_downloader.rs  list_manager.rs  list_parser.rs  list_view.rs  main.rs  passive_dns.rs  rule.rs  rule_view.rs  server.rs  source_view.rs  stats_view.rs  tasks.rs  validator.rs
submodules/: .gitmodules
whitelist/: whitelist.txt
(+234 files in other folders)
