[package]
name = "domain_list_builder"
version = "0.1.0"
authors = ["Alex Williams <hughaw64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockconvert = "^0.5.1"

reqwest = {version = "0.11", default-features = false, features = ["rustls-tls", "brotli", "gzip", "deflate"]}
futures = {version = "0.3"}
tokio = {version = "1", features = ["full"]}
tokio-stream = {version = "0.1", features = ["fs"]}

serde = {version = "1.0", features = ["derive"]}
tokio-tungstenite = {version = "0.18", features = ["rustls-tls-webpki-roots"]}

csv = "1.2"
serde_json = "1.0"

regex = {version = "1.7", features = ["std", "perf"]}

chrono = "0.4"
filetime = "0.2"

clap = {version = "4", features = ["derive"]}
toml = "0.7"
serde_derive = "1"

notify = "5"

parking_lot = "0.12"
fxhash = "0.2"

sled = "0.34.7"
zerocopy = "0.6.1"
thiserror = "1.0.38"
anyhow = "1.0"
num_cpus = "1.15.0"
dashmap = "5.4.0"
trust-dns-resolver = {version = "0.22.0", default-features = false, features = ["tokio-runtime"]}
bincode = "1.3.3"
mimalloc = "0.1.34"
log = {version = "0.4.17", default-features = false, features = ["max_level_off"]}
warp = {version = "0.3.5", features = ["compression"]}

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[profile.release]
debug = false
lto = "thin"
strip = true


[profile.dev.package."*"]
debug-assertions = false
opt-level = 3